# poetry-template

./: .dockerignore  Dockerfile  LICENSE  app.py  docker-compose.yml  pyproject.toml
