[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["Jhao <jhao413@qq.com>"]
readme = "README.md"
packages = [{include = "poetry_template"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
